packages/lang/test/__golden__/errors/missing-path.txt
error[TF010]: expected a path like `/orders`, found end of line
 --> missing-path.tflw:2:10
  |
2 |   api GET
  |          ^
